[package]
name = "arena"
version = "1.0.0"
edition = "2021"

authors = ["Rerumu"]
description = "Arena allocator data structure"
license = "LGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Rerumu/Arena"

keywords = ["arena", "allocator"]
categories = ["caching", "data-structures", "memory-management"]
